--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- This is a comment. I can see it in the code, but it will not appear in the browser. -->
 
-    <!-- 
+    <!--
     The head section contains info for search engines and the browser and is not seen by site visitors.
     -->
 
@@ -36,8 +36,9 @@
     <video controls>
       <source src="videos/real-estate.mp4" type="video/mp4">
       <source src="videos/real-estate.ogv" type="video/ogv">
-      Your browser does not support HTML5 video. Please upgrade your browser
-    </video>
-    
+      <a href="http://browsehappy.com" target="_blank">
+        Your browser does not support HTML5 video. Please upgrade your browser.</a>
+    </video>00
+
   </body>
 </html>
